--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,17 @@
 [package]
 name = "rusty-space"
+identifier = "com.zandy.exoticmatters"
 version = "0.1.0"
 edition = "2021"
+description = "The plotting and trajectory tool for the TTRPG Exotic Matters"
+license = "MIT"
+authors = ["Alexader Lowry <zander@zanderlowry.com"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 nalgebra = "0.32.3"
-glam = "0.25.0"
+glam = "0.26.0"
 num-traits = "0.2.17"
 bevy = "0.13.0"
 once_cell = "1.19.0"
