--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rusty-space"
+name = "exotic-matters"
 identifier = "com.zandy.exoticmatters"
 version = "0.1.0"
 edition = "2021"
@@ -10,11 +10,11 @@ authors = ["Alexader Lowry <zander@zanderlowry.com"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nalgebra = "0.32.3"
-glam = "0.26.0"
-num-traits = "0.2.17"
-bevy = "0.13.0"
+nalgebra = "0.32.5"
+glam = "0.27.0"
+num-traits = "0.2.18"
+bevy = "0.13.2"
 once_cell = "1.19.0"
-image = "0.25.0"
+image = "0.25.1"
 winit = "0.29.15"
 bevy-trait-query = "0.5.1"
