--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,14 @@ authors = ["Alexader Lowry <zander@zanderlowry.com"]
 
 [dependencies]
 nalgebra = "0.32.5"
-glam = "0.27.0"
+glam = { version = "0.27.0", features = ["serde"] }
 num-traits = "0.2.18"
 bevy = "0.13.2"
 once_cell = "1.19.0"
 image = "0.25.1"
 winit = "0.29.15"
 bevy-trait-query = "0.5.1"
+serde = { version = "1.0.201", features = ["derive"] }
+serde_json = "1.0.117"
+serde_yaml = "0.9.33"
+bevy_common_assets = { version = "0.10.0", features = ["yaml"] }
