--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ serde = { version = "1.0.201", features = ["derive"] }
 serde_json = "1.0.117"
 serde_yaml = "0.9.33"
 bevy_common_assets = { version = "0.10.0", features = ["yaml"] }
+scilib = "1.0.0"
