--- a/assets/templates/flat_kepler.yml
+++ b/assets/templates/flat_kepler.yml
@@ -26,7 +26,7 @@ bodies:
     physics: !FlatKepler
       semi_major_axis: 10.0
       mean_anomaly_at_epoch: 0.0
-      eccentricity: 0.75
+      eccentricity: 0.5
       longitude_of_periapsis: 0.0
     name: Planet
     mass: 1.0
@@ -39,24 +39,11 @@ bodies:
     parent: 0
   2:
     id: 2
-    physics: !StupidCircle
-      radius: 0.6
-    name: Moon
-    mass: 0.1
-    appearance: !Planetoid
-      radius: 0.1
-      color:
-      - 0.4
-      - 0.4
-      - 0.4
-    parent: 1
-  3:
-    id: 3
     physics: !FlatKepler
       semi_major_axis: 10.0
-      mean_anomaly_at_epoch: 3.1415926535
-      eccentricity: 0.75
-      longitude_of_periapsis: 0.0
+      mean_anomaly_at_epoch: 0.0
+      eccentricity: 0.5
+      longitude_of_periapsis: 1.0472
     name: Planet
     mass: 1.0
     appearance: !Planetoid
@@ -66,13 +53,13 @@ bodies:
         - 0.8
         - 0.4
     parent: 0
-  4:
-    id: 4
+  3:
+    id: 3
     physics: !FlatKepler
       semi_major_axis: 10.0
       mean_anomaly_at_epoch: 0.0
-      eccentricity: 0.75
-      longitude_of_periapsis: 3.1415926535
+      eccentricity: 0.5
+      longitude_of_periapsis: -1.0472
     name: Planet
     mass: 1.0
     appearance: !Planetoid
