--- a/saves/First Test.yml
+++ b/saves/First Test.yml
@@ -20,7 +20,7 @@ bodies:
       - 0.3
       - 0.1
       brightness: 15.0
-    parent: null
+    defined_primary: null
   1:
     id: 1
     physics: !StupidCircle
@@ -33,7 +33,7 @@ bodies:
         - 0.2
         - 0.8
         - 0.4
-    parent: 0
+    defined_primary: 0
   2:
     id: 2
     physics: !StupidCircle
@@ -46,5 +46,5 @@ bodies:
       - 0.4
       - 0.4
       - 0.4
-    parent: 1
+    defined_primary: 1
 counter: 3
