--- a/assets/templates/simple.yml
+++ b/assets/templates/simple.yml
@@ -87,4 +87,20 @@ bodies:
         - 0.0
         - 0.3
         - 1.0
+  5:
+    id: 5
+    physics: !FlatKepler
+      semi_major_axis: 3.0
+      mean_anomaly_at_epoch: 0.0
+      eccentricity: 0.5
+      longitude_of_periapsis: 0.0
+      primary: 0
+    name: Comet
+    mass: 1.0
+    appearance: !Planetoid
+      radius: 0.5
+      color:
+        - 0.0
+        - 0.5
+        - 0.7
 counter: 5
