--- a/assets/templates/hex_rosette.yml
+++ b/assets/templates/hex_rosette.yml
@@ -20,10 +20,10 @@ bodies:
       - 0.3
       - 0.1
       brightness: 15.0
-    defined_primary: null
   1:
     id: 1
     physics: !FlatKepler
+      primary: 0
       semi_major_axis: 10.0
       mean_anomaly_at_epoch: 0.0
       eccentricity: 0.5
@@ -36,10 +36,10 @@ bodies:
         - 0.2
         - 0.8
         - 0.4
-    defined_primary: 0
   2:
     id: 2
     physics: !FlatKepler
+      primary: 0
       semi_major_axis: 10.0
       mean_anomaly_at_epoch: 0.0
       eccentricity: 0.5
@@ -52,10 +52,10 @@ bodies:
         - 0.2
         - 0.8
         - 0.4
-    defined_primary: 0
   3:
     id: 3
     physics: !FlatKepler
+      primary: 0
       semi_major_axis: 10.0
       mean_anomaly_at_epoch: 0.0
       eccentricity: 0.5
@@ -68,10 +68,10 @@ bodies:
         - 0.2
         - 0.8
         - 0.4
-    defined_primary: 0
   4:
     id: 4
     physics: !FlatKepler
+      primary: 0
       semi_major_axis: 10.0
       mean_anomaly_at_epoch: 0.0
       eccentricity: 0.5
@@ -84,10 +84,10 @@ bodies:
         - 0.2
         - 0.8
         - 0.4
-    defined_primary: 0
   5:
     id: 5
     physics: !FlatKepler
+      primary: 0
       semi_major_axis: 10.0
       mean_anomaly_at_epoch: 0.0
       eccentricity: 0.5
@@ -100,10 +100,10 @@ bodies:
         - 0.2
         - 0.8
         - 0.4
-    defined_primary: 0
   6:
     id: 6
     physics: !FlatKepler
+      primary: 0
       semi_major_axis: 10.0
       mean_anomaly_at_epoch: 0.0
       eccentricity: 0.5
@@ -116,5 +116,4 @@ bodies:
         - 0.2
         - 0.8
         - 0.4
-    defined_primary: 0
 counter: 7
