--- a/saves/fleet_of_worlds.yml
+++ b/saves/fleet_of_worlds.yml
@@ -9,10 +9,10 @@ bodies:
     name: Sun
     mass: 10.0
     appearance: !Empty
-    defined_primary: null
   1:
     id: 1
     physics: !FlatKepler
+      primary: 0
       semi_major_axis: 10.0
       mean_anomaly_at_epoch: 0.0
       eccentricity: 0.3
@@ -25,10 +25,10 @@ bodies:
         - 0.2
         - 0.8
         - 0.4
-    defined_primary: 0
   2:
     id: 2
     physics: !FlatKepler
+      primary: 0
       semi_major_axis: 10.0
       mean_anomaly_at_epoch: 0.0
       eccentricity: 0.3
@@ -41,10 +41,10 @@ bodies:
         - 0.2
         - 0.8
         - 0.4
-    defined_primary: 0
   3:
     id: 3
     physics: !FlatKepler
+      primary: 0
       semi_major_axis: 10.0
       mean_anomaly_at_epoch: 0.0
       eccentricity: 0.3
@@ -57,10 +57,10 @@ bodies:
         - 0.2
         - 0.8
         - 0.4
-    defined_primary: 0
   4:
     id: 4
     physics: !FlatKepler
+      primary: 0
       semi_major_axis: 10.0
       mean_anomaly_at_epoch: 0.0
       eccentricity: 0.3
@@ -73,10 +73,10 @@ bodies:
         - 0.2
         - 0.8
         - 0.4
-    defined_primary: 0
   5:
     id: 5
     physics: !FlatKepler
+      primary: 0
       semi_major_axis: 10.0
       mean_anomaly_at_epoch: 0.0
       eccentricity: 0.3
@@ -89,10 +89,10 @@ bodies:
         - 0.2
         - 0.8
         - 0.4
-    defined_primary: 0
   6:
     id: 6
     physics: !FlatKepler
+      primary: 0
       semi_major_axis: 10.0
       mean_anomaly_at_epoch: 0.0
       eccentricity: 0.3
@@ -105,10 +105,10 @@ bodies:
         - 0.2
         - 0.8
         - 0.4
-    defined_primary: 0
   7:
     id: 7
     physics: !FlatKepler
+      primary: 2
       semi_major_axis: 1.0
       mean_anomaly_at_epoch: 0.0
       eccentricity: 0.0
@@ -127,10 +127,10 @@ bodies:
         - 0.3
         - 0.1
       brightness: 10.0
-    defined_primary: 2
   8:
     id: 8
     physics: !FlatKepler
+      primary: 2
       semi_major_axis: 1.0
       mean_anomaly_at_epoch: 0.0
       eccentricity: 0.0
@@ -149,10 +149,10 @@ bodies:
         - 0.3
         - 0.1
       brightness: 10.0
-    defined_primary: 2
   9:
     id: 9
     physics: !FlatKepler
+      primary: 3
       semi_major_axis: 1.0
       mean_anomaly_at_epoch: 0.0
       eccentricity: 0.0
@@ -171,10 +171,10 @@ bodies:
         - 1.0
         - 1.0
       brightness: 8.0
-    defined_primary: 3
   10:
     id: 10
     physics: !FlatKepler
+      primary: 3
       semi_major_axis: 1.0
       mean_anomaly_at_epoch: 0.0
       eccentricity: 0.0
@@ -193,10 +193,10 @@ bodies:
         - 1.0
         - 1.0
       brightness: 8.0
-    defined_primary: 3
   11:
     id: 11
     physics: !FlatKepler
+      primary: 3
       semi_major_axis: 1.0
       mean_anomaly_at_epoch: 0.0
       eccentricity: 0.0
@@ -215,5 +215,4 @@ bodies:
         - 1.0
         - 1.0
       brightness: 8.0
-    defined_primary: 3
 counter: 8
