--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ bevy_egui = "0.33.0"
 
 serde = { version = "1.0.215", features = ["derive"] }
 toml = "0.8.20"
+uuid = { version = "1.12.1", features = ["v4"] }
