--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,5 @@ bevy_egui = "0.33.0"
 serde = { version = "1.0.215", features = ["derive"] }
 toml = "0.8.20"
 uuid = { version = "1.12.1", features = ["v4"] }
+lazy_static = "1.4.0"
+regex = "1.10.3"
