--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ scilib = "1.0.0"
 
 bevy = "0.15.3"
 bevy_egui = "0.33.0"
+iyes_perf_ui = "0.4.0"
 bevy_flycam = "*"
 
 serde = { version = "1.0.215", features = ["derive"] }
