--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "exotic-matters"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 description = "The plotting and trajectory tool for the TTRPG Exotic Matters"
 license = "MIT"
 authors = ["Alexader Lowry <zander@zanderlowry.com"]
+default-run = "exotic-matters"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -30,3 +31,23 @@ toml = "0.8.20"
 uuid = { version = "1.12.1", features = ["v4"] }
 lazy_static = "1.4.0"
 regex = "1.10.3"
+url = "2.5.4"
+http = "1.3.1"
+reqwest = { version = "0.12", features = ["blocking"] }
+
+[dependencies.eframe]
+version = "0.26.0"
+features = [
+    "persistence", # Enable saving app state persistence
+]
+
+eframe = "0.32.0"
+url = "2.5.4"
+
+[[bin]]
+name = "exotic-matters"
+path = "src/bin/exotic_matters.rs"
+
+[[bin]]
+name = "horizons"
+path = "src/bin/horizons.rs"
