--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ regex = "1.10.3"
 url = "2.5.4"
 http = "1.3.1"
 reqwest = { version = "0.12", features = ["blocking"] }
+itertools = "0.14.0"
 
 [dependencies.eframe]
 version = "0.26.0"
