--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,9 @@ debug = false
 num-traits = "0.2.18"
 scilib = "1.0.0"
 
-bevy = "0.16.1"
-bevy_egui = "0.35.0"
-iyes_perf_ui = "0.5.0"
+bevy = "0.17.2"
+bevy_egui = "0.38.0"
+iyes_perf_ui = { git = "https://github.com/mgi388/iyes_perf_ui.git", branch = "bevy-0.17" }
 serde = { version = "1.0.215", features = ["derive"] }
 toml = "0.8.20"
 uuid = { version = "1.12.1", features = ["v4"] }
