--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ url = "2.5.4"
 http = "1.3.1"
 reqwest = { version = "0.12", features = ["blocking"] }
 itertools = "0.14.0"
+rusqlite = { version = "0.32", features = ["bundled"] }
 
 [dependencies.eframe]
 version = "0.26.0"
@@ -56,3 +57,7 @@ path = "src/bin/exotic_matters.rs"
 [[bin]]
 name = "horizons"
 path = "src/bin/horizons.rs"
+
+[[bin]]
+name = "migrate-saves"
+path = "src/bin/migrate_saves.rs"
